[gd_scene load_steps=21 format=2]

[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/PresBoy_off2.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/PresBoy_off1.png" type="Texture" id=2]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/PresBoy_on2.png" type="Texture" id=3]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/Tazer_on2.png" type="Texture" id=4]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/SbtgeTbl.png" type="Texture" id=5]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/Tazer_on1.png" type="Texture" id=6]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/PresBoy_on1.png" type="Texture" id=7]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/Tazer_off1.png" type="Texture" id=8]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/HeatRay_on.png" type="Texture" id=9]
[ext_resource path="res://Objects/Player/Minigames/Cursor.png" type="Texture" id=10]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/HeatRay_off.png" type="Texture" id=11]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ObjectSprites/Tazer_off2.png" type="Texture" id=12]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/SabotageCursor.gd" type="Script" id=13]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/Sabotage.gd" type="Script" id=14]
[ext_resource path="res://Objects/Player/Minigames/Sabotage/ButtonManager.gd" type="Script" id=15]
[ext_resource path="res://Objects/Letters/Letter.tscn" type="PackedScene" id=16]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 12 ) ],
"loop": true,
"name": "off",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "on",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "off",
"speed": 7.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "on",
"speed": 7.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.5, 0.5 )

[node name="MinigameBase" type="Node2D" groups=["Minigame"]]
position = Vector2( 50, 47 )
script = ExtResource( 14 )
attachedPlayer = 1

[node name="Table" type="Sprite" parent="."]
position = Vector2( 8, -11 )
texture = ExtResource( 5 )

[node name="ButtonManager" type="Node2D" parent="."]
position = Vector2( 10, -11 )
script = ExtResource( 15 )

[node name="Tazer" type="Node2D" parent="ButtonManager"]
position = Vector2( -40, -30 )

[node name="TazerCollision" type="Area2D" parent="ButtonManager/Tazer"]
collision_layer = 256
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ButtonManager/Tazer/TazerCollision"]
polygon = PoolVector2Array( 54, 33, 38, 17, 36, 15, 29, 5, 34, 1, 52, 1, 57, 5, 61, 9, 70, 20, 69, 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ButtonManager/Tazer"]
position = Vector2( 40, 29 )
frames = SubResource( 6 )
animation = "off"
frame = 1
playing = true

[node name="PressureBoy" type="Node2D" parent="ButtonManager"]
position = Vector2( -40, -30 )

[node name="PBoyCollision" type="Area2D" parent="ButtonManager/PressureBoy"]
position = Vector2( 40, 31 )
collision_layer = 256
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ButtonManager/PressureBoy/PBoyCollision"]
position = Vector2( -40, -31 )
polygon = PoolVector2Array( 41, 31, 33, 40, 40, 51, 48, 57, 59, 51, 54, 40, 48, 33 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ButtonManager/PressureBoy"]
position = Vector2( 40, 31 )
frames = SubResource( 7 )
animation = "off"
frame = 1
playing = true

[node name="HeatRay" type="Node2D" parent="ButtonManager"]
position = Vector2( -40, -30 )

[node name="HeatRayCollision" type="Area2D" parent="ButtonManager/HeatRay"]
collision_layer = 256
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ButtonManager/HeatRay/HeatRayCollision"]
polygon = PoolVector2Array( 4, 24, 8, 21, 18, 18, 23, 18, 39, 26, 36, 30, 25, 35, 19, 37, 16, 36, 14, 45, 1, 45, 2, 29 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ButtonManager/HeatRay"]
position = Vector2( 40, 29 )
frames = SubResource( 8 )
animation = "off"

[node name="Cursor" type="KinematicBody2D" parent="."]
position = Vector2( -34, -11 )
collision_layer = 256
collision_mask = 256
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor"]
position = Vector2( -3, -16 )
shape = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Cursor"]
margin_left = -32.0
margin_top = -41.0
margin_right = 6.0
margin_bottom = -7.0
rect_clip_content = true
stretch_mode = 3

[node name="Sprite" type="Sprite" parent="Cursor/TextureRect"]
position = Vector2( 33, 29 )
texture = ExtResource( 10 )

[node name="Overlay1" type="Node2D" parent="."]
visible = false
position = Vector2( -92, 28 )

[node name="Letter" parent="Overlay1" instance=ExtResource( 16 )]
position = Vector2( 29, -38 )
Text = "W"
Key = "Up1"

[node name="Letter2" parent="Overlay1" instance=ExtResource( 16 )]
position = Vector2( 19, -22 )
Text = "A"
Key = "Left1"

[node name="Letter3" parent="Overlay1" instance=ExtResource( 16 )]
position = Vector2( 35, -22 )
Text = "S"
Key = "Down1"

[node name="Letter4" parent="Overlay1" instance=ExtResource( 16 )]
position = Vector2( 51, -22 )
Text = "D"
Key = "Right1"

[node name="Letter5" parent="Overlay1" instance=ExtResource( 16 )]
position = Vector2( 45, -38 )
Text = "E"
Key = "Interact1"

[node name="Overlay2" type="Node2D" parent="."]
visible = false
position = Vector2( -78, 22 )

[node name="Letter" parent="Overlay2" instance=ExtResource( 16 )]
position = Vector2( 21, -52 )
Text = "↑ "
Key = "Up2"

[node name="Letter2" parent="Overlay2" instance=ExtResource( 16 )]
position = Vector2( 5, -36 )
Text = "← "
Key = "Left2"

[node name="Letter3" parent="Overlay2" instance=ExtResource( 16 )]
position = Vector2( 21, -36 )
Text = "↓ "
Key = "Down2"

[node name="Letter4" parent="Overlay2" instance=ExtResource( 16 )]
position = Vector2( 37, -36 )
Text = "→ "
Key = "Right2"

[node name="Letter5" parent="Overlay2" instance=ExtResource( 16 )]
position = Vector2( 9, -16 )
Text = "ctrl"
Key = "Interact2"

[connection signal="body_entered" from="ButtonManager/Tazer/TazerCollision" to="ButtonManager" method="_on_TazerCollision_body_entered"]
[connection signal="body_exited" from="ButtonManager/Tazer/TazerCollision" to="ButtonManager" method="_on_TazerCollision_body_exited"]
[connection signal="body_entered" from="ButtonManager/PressureBoy/PBoyCollision" to="ButtonManager" method="_on_PBoyCollision_body_entered"]
[connection signal="body_exited" from="ButtonManager/PressureBoy/PBoyCollision" to="ButtonManager" method="_on_PBoyCollision_body_exited"]
[connection signal="body_entered" from="ButtonManager/HeatRay/HeatRayCollision" to="ButtonManager" method="_on_HeatRayCollision_body_entered"]
[connection signal="body_exited" from="ButtonManager/HeatRay/HeatRayCollision" to="ButtonManager" method="_on_HeatRayCollision_body_exited"]
